# ubuconla-2024-conversational-ai

./: .gitignore  README.md
code/vocode-quickstart/: main.py  prompt_template.py  pyproject.toml
docs/: Ubucon Latinoamérica 2024(1).md  Ubucon Latinoamérica 2024.md  panning.md
slides/slidev-ubuconla-2024-conversational-ai/: package-lock.json  package.json  slides.md
slides/slidev-ubuconla-2024-conversational-ai/public/images/: ollama_gema.xcf
